# aap

./: .gitignore  README.md  docker-compose.yml
apps/backend/: Dockerfile  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial_schema.py
apps/backend/app/: main.py
apps/backend/app/api/: deps.py
apps/backend/app/api/v1/: auth.py  curriculum.py  health.py  ingestion.py  knowledge_base.py  questions.py  router.py
apps/backend/app/core/: config.py  logging.py  security.py
apps/backend/app/models/: __init__.py  common.py  curriculum.py  question.py  student.py
apps/backend/app/prompts/: question_generation.v1.json
apps/backend/app/repositories/: curriculum.py  questions.py  users.py
apps/backend/app/schemas/: auth.py  curriculum.py  health.py  knowledge_base.py  question.py
apps/backend/app/services/: storage.py
apps/backend/app/services/ingestion/: chunker.py  extractors.py  pipeline.py  source_type.py
apps/backend/app/services/knowledge_graph/: kb_mapping.py  topic_detection.py  topic_taxonomy.py
apps/backend/app/services/questions/: embeddings.py  fingerprinting.py  generator.py  pipeline.py  validation.py
apps/backend/app/workers/: tasks.py
apps/backend/tests/: test_chunker.py  test_kb_mapping.py  test_question_services.py  test_security.py  test_source_type.py
apps/frontend/: package-lock.json  package.json  tailwind.config.ts
apps/frontend/app/: globals.css  layout.tsx
apps/frontend/components/: knowledge-base-admin.tsx  (+5 more)
docs/: phase-1.md
scripts/: dev-backend.sh  migrate.sh
(+9 files in other folders)
