[project]
name = "adaptive-assessment-backend"
version = "0.1.0"
description = "FastAPI backend for an adaptive IB assessment platform"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "dramatiq[redis]>=1.17.0",
  "fastapi>=0.112.0",
  "greenlet>=3.0.3",
  "httpx>=0.27.0",
  "openai>=1.40.0",
  "passlib[bcrypt]>=1.7.4",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "pypdf>=4.3.1",
  "python-docx>=1.1.2",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.8",
  "sqlalchemy>=2.0.32",
  "structlog>=24.4.0",
  "tenacity>=8.5.0",
  "uvicorn[standard]>=0.30.5"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.7"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]
